fix(paginaror): img{color, align-items}削除

--- a/src/app/paginator/paginator.component.scss
+++ b/src/app/paginator/paginator.component.scss
@@ -31,7 +31,5 @@ ul {
 }
 
 img {
-  color: #202124;
-  align-items: center;
   display: block;
 }
